--- a/hw2/styles.css
+++ b/hw2/styles.css
@@ -21,20 +21,26 @@ table{
     border-collapse: separate;
     border-spacing: 5px;
     color: black;
-    border-radius: 20px;
     margin: auto;
+    border: 1px solid black;
 }
 td {
     padding: 10px;
+    border: 1px solid grey;
 }
 div.showError{
     text-align: center;
     font-size: 100%;
     color: red;
 }
-tr:nth-child(odd) {
-    background: tan;
+
+th {
+    background: white;
+  /*  border: 1px solid black;*/
 }
 tr:nth-child(even) {
-    background: antiquewhite;
+    background: ghostwhite;
+}
+tr:nth-child(odd) {
+    background: lightblue;
 }
